--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,9 +14,9 @@ post_class: post-template page-template
         <!-- <header class="post-header">
             <a id="blog-logo" href="{{site.baseurl}}">
                 {% if site.logo %}
-                    <img src="{{site.logo}}" alt="{{ site.name }}" />
+                    <img src="{{site.logo}}" alt="{{ site.title }}" />
                 {% else %}
-                    <span class="blog-title">{{ site.name }}</span>
+                    <span class="blog-title">{{ site.title }}</span>
                 {%endif%}
             </a>
         </header> -->
