--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,9 +29,9 @@ post_class: post-template
 <!--         <header class="post-header">
             <a id="blog-logo" href="{{site.url}}">
                 {% if site.logo %}
-                    <img src="{{site.logo}}" alt="{{ site.name }}" />
+                    <img src="{{site.logo}}" alt="{{ site.title }}" />
                 {% else %}
-                    <span class="blog-title">{{ site.name }}</span>
+                    <span class="blog-title">{{ site.title }}</span>
                 {%endif%}
             </a>
         </header> -->
