--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -682,15 +682,15 @@ margin on the iframe, cause it breaks stuff. */
 .no-cover.main-header {
     min-height: 160px;
     max-height: 40%;
-    background: #f5f8fa;
+    background: #196b69;
 }
 
 .no-cover .page-title {
-    color: rgba(0,0,0,0.8);
+    color: #ddfee4;
 }
 
 .no-cover .page-description {
-    color: rgba(0,0,0,0.5);
+    color: #ddfee4;
 }
 
 .no-cover .main-nav.overlay .back-button,
