--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,10 +19,11 @@ post_class: post-template
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
             <section class="post-meta">
-                <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
+                {{page.author}}
                 {% if page.categories.size > 0 %}
                     {{ page.categories | array_to_sentence_string | prepend: 'on ' }}
                 {% endif %}
+                <time class="post-date" datetime="{{ page.date | date:'%Y-%m-%d' }}">{{ page.date | date_to_string }}</time>
             </section>
         </header>
 
@@ -44,7 +45,7 @@ post_class: post-template
         </span> -->
 
         <!-- <h1 class="post-title">{{ page.title }}</h1> -->
-
+        <br \>
         <section class="post-content">
             {{content}}
         </section>
