fix relative urls

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     {{ content }}
     <footer class="site-footer clearfix">
       <section class="copyright">
-        <a href="{{ site.baseurl }}">{{ site.title }}</a> &copy;
+        <a href="{{ "/" | relative_url }}">{{ site.title }}</a> &copy;
               {{"now" | date: "%Y"}} &bull; All rights reserved.
       </section>
       <section class="poweredby">Made with Jekyll using
