--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ post_class: post-template
 
 <header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav {% if page.cover %} overlay {% endif %} clearfix">
-        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
-        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
+        <a class="back-button icon-arrow-left" href="{{ "/" | relative_url }}">Home</a>
+        <a class="subscribe-button icon-feed" href="{{ "feed.xml" | relative_url }}">Subscribe</a>
     </nav>
 </header>
 
@@ -66,7 +66,7 @@ post_class: post-template
             {% if true %}
             {% if false %}
                 <figure class="author-image">
-                    <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
+                    <a class="img" href="{{ "/" | relative_url }}" style="background-image: url(/assets/images/profile.png)">
                     <span class="hidden">{{site.author}}'s Picture</span></a>
                 </figure>
             {% endif %}
